BSB/force-app/main/default/objects/Engagement_de_confidentialit__c/Engagement_de_confidentialit__c.object-meta.xml
<CustomObject>
    <label>Engagement de confidentialité</label>
    <nameField>
        <label>Numéro d&apos;engagement de confidentialité</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement de confidentialité</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>