BSB/force-app/main/default/objects/Engagement_de_confidentialit__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement de confidentialité</relationshipLabel>
    <relationshipName>Engagement_de_confidentialit</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>