BSB/force-app/main/default/objects/Engagement_de_confidentialit__c/fields/Compte_suppl_mentaire__c.field-meta.xml
<CustomField>
    <fullName>Compte_suppl_mentaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte supplémentaire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement de confidentialité (Compte supplémentaire)</relationshipLabel>
    <relationshipName>Engagement_de_confidentialit1</relationshipName>
    <type>Lookup</type>
</CustomField>