BSB/force-app/main/default/objects/Engagement_de_confidentialit__c/fields/Date_de_d_but__c.field-meta.xml
<CustomField>
    <fullName>Date_de_d_but__c</fullName>
    <label>Date de début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>