BSB/force-app/main/default/objects/Engagement_de_confidentialit__c/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projet</label>
    <referenceTo>Projet__c</referenceTo>
    <relationshipLabel>Engagement de confidentialité</relationshipLabel>
    <relationshipName>Engagement_de_confidentialit</relationshipName>
    <type>Lookup</type>
</CustomField>